cf_analysis_results/checkerframework_3.42.0_results_WPI/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../dataset/june2020_dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:15: error: (required.method.not.called) $$ 4 $$ method close $$ field printer $$ java.io.PrintWriter $$  The enclosing element ar.fiuba.tecnicas.framework.JTest.XmlPrinter has an empty @MustCall annotation $$ ( 334, 362 ) $$ @MustCall method close may not have been invoked on field printer or any of its aliases.
    private PrintWriter printer;
                        ^
  The type of object is: java.io.PrintWriter.
  Reason for going out of scope:  The enclosing element ar.fiuba.tecnicas.framework.JTest.XmlPrinter has an empty @MustCall annotation
../dataset/june2020_dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:21: error: (missing.creates.mustcall.for) $$ 3 $$ inicializar $$ this $$ printer $$ ( 474, 709 ) $$ Method inicializar re-assigns the non-final, owning field this.printer, but does not have a corresponding @CreatesMustCallFor annotation.
    private void inicializar() {
                 ^
../dataset/june2020_dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:23: error: (required.method.not.called) $$ 4 $$ method close $$ new FileWriter("ReporteXsd.xml") $$ java.io.FileWriter $$ regular method exit $$ ( 542, 574 ) $$ @MustCall method close may not have been invoked on new FileWriter("ReporteXsd.xml") or any of its aliases.
            fileWriter = new FileWriter("ReporteXsd.xml");
                         ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:24: error: (required.method.not.called) $$ 4 $$ method close $$ field printer $$ java.io.PrintWriter $$  Non-final owning field might be overwritten $$ ( 588, 625 ) $$ @MustCall method close may not have been invoked on field printer or any of its aliases.
            printer = new PrintWriter(fileWriter);
                    ^
  The type of object is: java.io.PrintWriter.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:96: error: (contracts.postcondition) $$ 3 $$ imprimirCloseTestSuite $$ this.printer is @CalledMethods $$ this.printer is @CalledMethods("close") $$ ( 3225, 3672 ) $$ postcondition of imprimirCloseTestSuite is not satisfied.
    private void imprimirCloseTestSuite(String name) {
                 ^
  found   : this.printer is @CalledMethods
  required: this.printer is @CalledMethods("close")
5 errors
